# peopleFabrix

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TEST_CASES.md  pyproject.toml
app/: documents.py  history.py  main.py  mcp_client.py  orchestrator.py  pending_actions.py  personas.py
app/mcp_server/: hris_store.py  letters.py  server.py  warehouse_data.py
app/providers/: anthropic_provider.py  base.py  openai_provider.py
app/rag/: config.py  ingest.py  retrieve.py
app/static/css/: style.css
app/static/js/: chat.js
app/templates/: index.html
