[project]
name = "peoplefabrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "jinja2>=3.1.6",
    "openai>=1.109.0",
    "python-dotenv>=1.1.0",
    "chromadb>=0.5.0",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.0",
    "anthropic>=0.118.0",
    "mcp>=1.28.1",
    "langfuse>=4.14.1",
    "reportlab>=4.2.0",
    "pillow>=10.4.0",
]

[project.scripts]
dev = "app.main:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
